--- a/Peppermint/FastRecordingView.xib
+++ b/Peppermint/FastRecordingView.xib
@@ -3,6 +3,11 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="OpenSans-Semibold.ttf">
+            <string>OpenSans-Semibold</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -61,33 +66,38 @@
                     <color key="textColor" red="0.90823108460000002" green="0.081871332150000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swipeToCancel" translatesAutoresizingMaskIntoConstraints="NO" id="G44-pU-yBs">
-                    <rect key="frame" x="0.0" y="506" width="320" height="57"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dm-20-FSE">
+                    <rect key="frame" x="0.0" y="511" width="320" height="57"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="57" id="Dbj-e2-5eu"/>
+                        <constraint firstAttribute="height" constant="57" id="ViX-gg-JLS"/>
                     </constraints>
-                </imageView>
+                    <string key="text">_Swipe in any direction
+to cancel</string>
+                    <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="20"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="G44-pU-yBs" firstAttribute="top" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" constant="39" id="4Jp-J5-47v"/>
-                <constraint firstItem="G44-pU-yBs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="75q-1l-clL"/>
+                <constraint firstItem="3dm-20-FSE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="APO-ja-Cef"/>
+                <constraint firstItem="3dm-20-FSE" firstAttribute="top" relation="lessThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" constant="44" id="B16-dv-6m6"/>
                 <constraint firstItem="7Qx-iJ-3yh" firstAttribute="top" relation="lessThanOrEqual" secondItem="4vy-Vz-Ek4" secondAttribute="bottom" constant="30" id="Ccn-hc-FZA"/>
                 <constraint firstItem="PZg-zV-ZMy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="25" id="Dl6-Nu-ADo"/>
                 <constraint firstAttribute="centerX" secondItem="4vy-Vz-Ek4" secondAttribute="centerX" id="Esh-Uq-fin"/>
                 <constraint firstAttribute="bottom" secondItem="Yze-9c-yzA" secondAttribute="bottom" id="GtG-AD-xQr"/>
                 <constraint firstItem="PZg-zV-ZMy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="HpQ-7a-0jI"/>
-                <constraint firstAttribute="bottom" secondItem="G44-pU-yBs" secondAttribute="bottom" constant="5" id="Pzh-yk-3Yj"/>
+                <constraint firstAttribute="bottom" secondItem="3dm-20-FSE" secondAttribute="bottom" id="Nvl-Du-uN9"/>
                 <constraint firstItem="4vy-Vz-Ek4" firstAttribute="top" relation="lessThanOrEqual" secondItem="PZg-zV-ZMy" secondAttribute="bottom" priority="750" constant="98" id="Tk0-eX-Nyn"/>
                 <constraint firstItem="7Qx-iJ-3yh" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="60" id="bb7-9w-t8s"/>
-                <constraint firstItem="G44-pU-yBs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" constant="20" id="cUu-cm-IIC"/>
                 <constraint firstItem="Yze-9c-yzA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="eKV-VJ-7Cy"/>
-                <constraint firstAttribute="trailing" secondItem="G44-pU-yBs" secondAttribute="trailing" id="fQl-es-4Bx"/>
                 <constraint firstAttribute="trailing" secondItem="Yze-9c-yzA" secondAttribute="trailing" id="fbd-tq-NcO"/>
+                <constraint firstItem="3dm-20-FSE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7Qx-iJ-3yh" secondAttribute="bottom" constant="10" id="gmQ-ku-5rF"/>
                 <constraint firstAttribute="trailing" secondItem="PZg-zV-ZMy" secondAttribute="trailing" constant="8" id="ksL-oB-nHV"/>
                 <constraint firstAttribute="trailing" secondItem="7Qx-iJ-3yh" secondAttribute="trailing" constant="60" id="ox6-Tf-afx"/>
                 <constraint firstAttribute="centerY" secondItem="4vy-Vz-Ek4" secondAttribute="centerY" id="r6f-CR-mYy"/>
                 <constraint firstItem="Yze-9c-yzA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="vhk-Wi-rO2"/>
+                <constraint firstAttribute="trailing" secondItem="3dm-20-FSE" secondAttribute="trailing" id="zNn-rt-mo9"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <variation key="default">
@@ -101,12 +111,12 @@
                 <outlet property="navigationTitleLabel" destination="PZg-zV-ZMy" id="35b-Kv-cAK"/>
                 <outlet property="progressCenterImageView" destination="Kks-qv-Zee" id="v7d-rZ-V00"/>
                 <outlet property="progressContainerView" destination="4vy-Vz-Ek4" id="d4p-hI-bI6"/>
+                <outlet property="swipeInAnyDirectionLabel" destination="3dm-20-FSE" id="TuM-0k-h2Y"/>
             </connections>
-            <point key="canvasLocation" x="279.5" y="230.5"/>
+            <point key="canvasLocation" x="279" y="230"/>
         </view>
     </objects>
     <resources>
         <image name="recording_logo1" width="397" height="395"/>
-        <image name="swipeToCancel" width="401" height="112"/>
     </resources>
 </document>
